--- a/helm/charts/hpe-csi-driver/templates/hpe-csi-controller.yaml
+++ b/helm/charts/hpe-csi-driver/templates/hpe-csi-controller.yaml
@@ -160,6 +160,10 @@ spec:
         - name: root-dir
           hostPath:
             path: /
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml .| nindent 8 }}
+      {{- end }}
       tolerations:
         - effect: NoExecute
           key: node.kubernetes.io/not-ready
